@@ -8,6 +8,7 @@ Version 3.0.0
   - Block soft fork support (BIP 9)
   - Reduce bloom filter size by specifying UPDATE_NONE
   - OP_CHECKLOCKTIMEVERIFY support (BIP 65)
+  - OP_CHECKSEQUENCEVERIFY support (BIP 68 and BIP 112)
 
 
 Version 2.1.2
